Bug 87634 - Assertion 'canonical' failed at src/nss-myhostname/nss-myhostname.c:204 when starting StarCraft 2 through wine
Summary: Assertion 'canonical' failed at src/nss-myhostname/nss-myhostname.c:204 when ...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Zbigniew Jedrzejewski-Szmek
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
: 88007 88053 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-23 11:05 UTC by Silvan Jegen
Modified: 2015-01-05 16:18 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Back trace (7.52 KB, text/plain)
2014-12-23 11:05 UTC, Silvan Jegen
Details
Terminal output at crash time (3.31 KB, text/plain)
2014-12-23 11:06 UTC, Silvan Jegen
Details
Terminal output of a working session (12.13 KB, text/plain)
2014-12-23 11:09 UTC, Silvan Jegen
Details

Description Silvan Jegen 2014-12-23 11:05:21 UTC
Created attachment 111215 [details]
Back trace

When starting StarCraft 2 through wine I got shown a chain of errors which indicated that an assertion in the fill_in_hostent function of libnss-myhostname was hit.

I opened a bug at the Wine project and was told to report the issue here (the bug at winehq is https://bugs.winehq.org/show_bug.cgi?id=37766 ).

Please find attached a back trace and the terminal output I received at crash time as well as the terminal output I received when I retried starting SC2 again today and it worked (i. e. terminal output of a working session).
Comment 1 Silvan Jegen 2014-12-23 11:06:10 UTC
Created attachment 111216 [details]
Terminal output at crash time
Comment 2 Silvan Jegen 2014-12-23 11:09:32 UTC
Created attachment 111217 [details]
Terminal output of a working session

I have not changed any software on the machine since the bug occurred so I assume a networking condition was responsible for the error.
Comment 3 Zbigniew Jedrzejewski-Szmek 2015-01-05 14:58:00 UTC
*** Bug 88053 has been marked as a duplicate of this bug. ***
Comment 4 Lennart Poettering 2015-01-05 15:26:47 UTC
Oh, ah, sorry, Zbigniew. Just noticed you assigned the bug to yourself, but I just pushed a fix for this. Hope I didn't intefere with your work! Sorry!

Anyway, should be fixed now. Closing.
Comment 5 Zbigniew Jedrzejewski-Szmek 2015-01-05 16:15:59 UTC
No, I didn't get any further than opening the editor :)
Comment 6 Lennart Poettering 2015-01-05 16:18:09 UTC
*** Bug 88007 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.