nss-myhostname: always will in canonical hostname field when resolving addresses to hostnames

https://bugs.freedesktop.org/show_bug.cgi?id=87634